--- a/css/style.scss
+++ b/css/style.scss
@@ -83,6 +83,7 @@ button{
 .attribution {
   font-size: 11px;
   text-align: center;
+  margin-bottom: 24px;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
