--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,8 @@ button:hover {
   color: white;
   cursor: pointer;
   background-color: inherit;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
 }
 
 .attribution {
