--- a/css/style.scss
+++ b/css/style.scss
@@ -78,6 +78,7 @@ button{
       color: white;
       cursor: pointer;
       background-color: inherit;
+      transition: all 0.3s ease-out;
     }
 }
 .attribution {
